# stsmoddergui

./: .gitignore  AGENTS.md  README.md  bootstrap_mod.py  digimonmoddevelopmentplan.md  futures.md  image_gen_cli.py  plugins.py  pyproject.toml  pytest.ini
docs/: full_mod_tutorial.md
donotimplementyet/: AGENTS.md
how to/: advanced-keywords.md  basic-character.md  custom-keywords.md  deck-analytics.md  graalpy-adaptive-illustrations.md  graalpy-cinematic-rivalry.md  graalpy-coaching-ghosts.md  live-tutorial-narrator.md  load-and-play-mod.md  runtime-overlays.md
mods/: __init__.py
modules/: __init__.py
research/: adventure_raw.html  agumon_2006_wikitext.json  agumon_adventure_wikitext.json  agumon_base_wikitext.json  agumon_burst_mode_wikitext.json  agumon_data_squad_wikitext.json  agumon_line_attacks.md  agumon_tamers_wikitext.json  armor_raw.html  base_card_keyword_flags.md  basemod_BaseMod_java.md  basemod_BaseMod_source.java  basemod_card_texture_defaults.md  basemod_custom_card_types.md  basemod_keyword_color_info.java  basemod_notes.md  basemod_render_overlay_notes.md  basemod_summary.md  choose_card_interfaces.md  content-item-decrypter.worker.js  content-item-decrypter.worker.pretty.js  digitalesmonster_agumon_formen_research.md  file-sharing-provider-DDdyxT8m.js  file-sharing-provider-DDdyxT8m.pretty.js  graalpy_dependency_compatibility.md  graalpy_runtime_modding_examples.md  graalpy_runtime_prep.md  imperialdramon_paladin_mode_wikitext.json  jogress_fusion_notes.md  limewire_download_notes.md  maildramon_wikitext.json  mod_loading_workflows.md  (+18 more)
(+92 files in other folders)
